--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -13,6 +13,7 @@
 @media(max-width: 720px) {
     .button__frame {
         padding: 15px;
+        border-radius: 15px;
     }
 
     .svg {
