--- a/src/components/favorite-card/LeaderCard.css
+++ b/src/components/favorite-card/LeaderCard.css
@@ -23,6 +23,15 @@
     height: 50px;
     flex-shrink: 0;
     border-radius: 10px;
+    border: 2px solid #E7E7E7;
+}
+
+.first {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 10px;
     border: 2px solid #FFFBA6;
     box-shadow: 0 4px 5px 0 rgba(255, 160, 71, 0.35), 0 -4px 5px 0 rgba(255, 249, 114, 0.15);
 }
