--- a/src/pages/game/GamePage.css
+++ b/src/pages/game/GamePage.css
@@ -5,6 +5,7 @@
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-bottom: 70px;
 }
 
 .container__fluid__game {
@@ -25,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 20px;
+    gap: 10px;
 }
 
 .main__frame__game {
@@ -125,6 +126,7 @@
 
     .navigation__frame__game {
         right: 70px;
+        gap: 10px;
     }
 
     .cards__frame:hover {
